--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -2,6 +2,7 @@ html,body,#app {
     height: 100%;
     margin: 0;
     padding: 0;
+    overflow-y:hidden;
 }
 .el-breadcrumb{
     margin-bottom: 15px;
