--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -13,3 +13,7 @@ html,body,#app {
     margin-top: 15px;
     font-size: 12px;
 }
+.el-card {
+    overflow:auto;
+    height: calc(100vh - 100px);
+  }
